--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,14 +52,17 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
-
+    implementation "androidx.compose.ui:ui-util:$compose_version"
     implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
-
-    implementation 'androidx.compose.material3:material3:1.1.0-alpha02'
+    implementation "io.coil-kt:coil-compose:2.2.2"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
+    implementation 'androidx.compose.material3:material3:1.1.0-alpha03'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
