--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,15 @@
         android:theme="@style/Theme.BookShop"
         tools:targetApi="31">
         <activity
+            android:name=".ui.bookdetail.BookDetailActivity"
+            android:exported="false"
+            android:label="@string/title_activity_book_detail"
+            android:theme="@style/Theme.BookShop">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".ui.cart.CartExample"
             android:exported="false"
             android:label="@string/title_activity_cart_example"
